tests/baselines/reference/tsxPreserveEmit3.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
test.d.ts(1,12): error TS7005: Variable 'React' implicitly has an 'any' type.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== file.tsx (0 errors) ====
    declare namespace JSX {
    	interface Element { }
    	interface IntrinsicElements {
    		[s: string]: any;
    	}
    }
    
==== test.d.ts (1 errors) ====
    export var React;
               ~~~~~
!!! error TS7005: Variable 'React' implicitly has an 'any' type.
    
==== react-consumer.tsx (0 errors) ====
    // This import should be elided
    import {React} from "./test";
    